--- a/server/resources/[ox]/ox_inventory/locales/da.json
+++ b/server/resources/[ox]/ox_inventory/locales/da.json
@@ -48,7 +48,7 @@
   "buy_amount": "Du skal enter et antal du ønsker at købe",
   "component_has": "Dette våben har allerede %s",
   "component_invalid": "Dette våben kan ikke benytte %s",
-  "component_slot_occupied": "Dette våben %s slot er optaget",  
+  "component_slot_occupied": "Dette våben %s slot er optaget",
   "cannot_perform": "Du kan ikke udføre denne handling",
   "cannot_carry": "Du kan ikke bære så meget",
   "cannot_carry_other": "Inventaret du prøver at lægge i kan ikke indeholde så meget",
@@ -58,6 +58,7 @@
   "items_returned": "Dine ting er blevet returneret",
   "item_unauthorised": "Du har ikke tilladelse til at købe denne ting",
   "item_unlicensed": "Du har ikke licens til at købe denne ting",
+  "item_unqualified": "Du har ikke kvalifikation til at købe denne ting",
   "item_not_enough": "Du har ikke nok %s",
   "cannot_afford": "Du har ike råd til dette (mangler %s)",
   "stash_lowgrade": "Du er ikke autoriseret til at tage denne ting",
