--- a/server/resources/[ox]/ox_inventory/locales/de.json
+++ b/server/resources/[ox]/ox_inventory/locales/de.json
@@ -48,7 +48,7 @@
   "buy_amount": "Trage die Anzahl ein die du kaufen möchtest",
   "component_has": "Diese Waffe hat bereits ein/e %s",
   "component_invalid": "Diese Waffe ist nicht kompatibel mit einem %s",
-  "component_slot_occupied" : "Der %s Slot dieser Waffe ist bereits belegt",
+  "component_slot_occupied": "Der %s Slot dieser Waffe ist bereits belegt",
   "cannot_perform": "Du kannst diese Aktion nicht ausführen",
   "cannot_carry": "Du kannst nicht so viel tragen",
   "cannot_carry_other": "Das Inventar hat nicht genügend Platz",
@@ -58,6 +58,7 @@
   "items_returned": "Deine Gegenstände wurden dir zurückgegeben",
   "item_unauthorised": "Du bist nicht autorisiert diesen Gegenstand zu kaufen",
   "item_unlicensed": "Du hast nicht die Lizenz um diesen Gegenstand zu kaufen",
+  "item_unqualified": "Du hast nicht die Qualifikation um diesen Gegenstand zu kaufen",
   "item_not_enough": "Du hast nicht genug %s",
   "cannot_afford": "Du hast nicht genug (%s fehlt)",
   "stash_lowgrade": "Du bist nicht autorisiert diesen Gegenstand zu nehmen",
