--- a/server/resources/[ox]/ox_inventory/locales/el.json
+++ b/server/resources/[ox]/ox_inventory/locales/el.json
@@ -55,6 +55,7 @@
   "items_returned": "Τα αντικείμενά σας έχουν επιστραφεί",
   "item_unauthorised": "Δεν είστε εξουσιοδοτημένοι να αγοράσετε αυτό το αντικείμενο",
   "item_unlicensed": "Δεν έχετε άδεια αγοράς για αυτο το αντικείμενο",
+  "item_unqualified": "Δεν έχετε την κατάλληλη κατάσταση για να αγοράσετε αυτό το αντικείμενο",
   "item_not_enough": "Δεν έχεις αρκετά %s",
   "cannot_afford": "Δεν έχεις αρκετά χρήματα (ελλειπές %s)",
   "stash_lowgrade": "Δεν είστε εξουσιοδοτημένοι να πάρετε αυτό το αντικείμενο",
