--- a/server/resources/[ox]/ox_inventory/locales/en.json
+++ b/server/resources/[ox]/ox_inventory/locales/en.json
@@ -58,6 +58,7 @@
   "items_returned": "Your items have been returned",
   "item_unauthorised": "You are not authorised to purchase this item",
   "item_unlicensed": "You are not licensed to purchase this item",
+  "item_unqualified": "You are not qualified to purchase this item",
   "item_not_enough": "You do not have enough %s",
   "cannot_afford": "You can not afford that (missing %s)",
   "stash_lowgrade": "You are not authorised to take this item",
