--- a/server/resources/[ox]/ox_inventory/locales/ko.json
+++ b/server/resources/[ox]/ox_inventory/locales/ko.json
@@ -53,6 +53,7 @@
   "items_returned": "귀하의 항목이 반환되었습니다",
   "item_unauthorised": "이 항목을 구매할 권한이 없습니다.",
   "item_unlicensed": "이 항목을 구매할 수 있는 권한이 없습니다.",
+  "item_unqualified": "이 항목을 구매할 수 있는 권한이 없습니다.",
   "item_not_enough": "%s이(가) 충분하지 않습니다.",
   "cannot_afford": "당신은 그것을 감당할 수 없습니다(%s 누락)",
   "stash_lowgrade": "이 항목을 가져갈 권한이 없습니다.",
