--- a/server/resources/[ox]/ox_inventory/locales/ru.json
+++ b/server/resources/[ox]/ox_inventory/locales/ru.json
@@ -55,6 +55,7 @@
   "items_returned": "Ваши предметы были возвращены",
   "item_unauthorised": "У вас нет прав на приобретение этого предмета",
   "item_unlicensed": "У вас нет лицензии на этот товар",
+  "item_unqualified": "У вас нет квалификации для приобретения этого предмета",
   "item_not_enough": "У вас недостаточно %s",
   "cannot_afford": "Недостаточно средств (не хватает %s)",
   "stash_lowgrade": "У вас нет прав взять этот предмет",
